plugins {
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'com.github.spotbugs' version '6.1.1'
    id 'jacoco'
    id 'checkstyle'
}

checkstyle {
    toolVersion = '13.4.2'
}

group = 'com.ticketorchestra'
version = '0.0.1-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    implementation platform('org.springframework.modulith:spring-modulith-bom:2.0.6')
    implementation 'org.springframework.modulith:spring-modulith-starter-core'
    implementation platform('software.amazon.awssdk:bom:2.30.0')
    implementation 'software.amazon.awssdk:dynamodb'
    implementation 'software.amazon.awssdk:dynamodb-enhanced'
    implementation 'software.amazon.awssdk:sqs'
    implementation 'software.amazon.awssdk:auth'
    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.8.6'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'io.rest-assured:rest-assured:5.5.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:localstack'
    testImplementation platform('org.testcontainers:testcontainers-bom:1.20.6')
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
